--- a/vscode.config.json
+++ b/vscode.config.json
@@ -7,6 +7,7 @@
         "*.babel": "javascript",
         "*.wxss": "css"
     },
+    "javascript.implicitProjectConfig.experimentalDecorators": true,
     "telemetry.enableCrashReporter": false,
     "files.eol": "\n",
     "files.trimTrailingWhitespace": true,
@@ -16,5 +17,8 @@
     "npm.enableScriptExplorer": true,
     "workbench.commandPalette.preserveInput": true,
     "workbench.iconTheme": "material-icon-theme",
-    "git.autofetch": true
+    "git.autofetch": true,
+    "eslint.options": {
+        "configFile": "./.eslintrc.js"
+    }
 }
